# ngterm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
legal/: credits.txt
src/: Makefile  cmdline.cxx  consts.cxx  debug.cxx  display.cxx  fb.cxx  font.cxx  fterror.cxx  io.cxx  main.cpp  makefile  ngterm.cxx  pty.cxx  tty.cxx  types.cxx
